--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
+body{
+  font-family: "Roboto Condensed" sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root{
+  --primary-white:#fff;
+  --primary-orange:#f9ab00;
+  --primary-dark:rgba(255,255,255,0);
+}
+/* -----------------------Navbar ------------------------- */
+.logo{
+  width:4rem;
+  height: 4rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* ------------ Menu- Links ------------------- */
+nav a.nav-link{
+  letter-spacing: 0.0375rem;
+  cursor: pointer;
+
+}
+nav ul li{
+  text-transform: uppercase;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.navbar-nav > li > a{
+  margin-right: 0.75rem;
+  margin-left: 0.75rem;
+  color:var(--primary-white) !important;
+  border-top: 0.1875rem solid var(--primary-dark);
 }
 
-.App-link {
-  color: #61dafb;
+.navbar-brand{
+  max-width: 17rem;
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar-nav > li > a.active,.navbar-nav>li>a:focus,.navbar-nav>li>a.active:focus{
+  border-top: 0.1875rem solid var(--primary-orange);
+}
+.navbar-nav>li>a:hover{
+  border-top: 0.1875rem solid var(--primary-orange);
+  
 }
